--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 # testing
 /coverage
 
+
 # production
 /build
+/codesamples
 
 # misc
 .DS_Store
@@ -16,6 +18,9 @@
 .env.test.local
 .env.production.local
 
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.env
