--- a/package.json
+++ b/package.json
@@ -3,14 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.3.17",
+    "bootstrap": "^4.1.1",
+    "classnames": "^2.2.6",
+    "firebase": "^5.0.4",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://calvincheng919.github.io/OptionsTracker",
+  "devDependencies": {
+    "@types/reactstrap": "^5.0.27",
+    "gh-pages": "^1.2.0"
   }
 }
