--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^6.1.0"
   },
   "scripts": {
@@ -29,5 +29,11 @@
   "devDependencies": {
     "@types/reactstrap": "^5.0.27",
     "gh-pages": "^1.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
